수정한 계싼기

--- a/window_calc.ipynb
+++ b/window_calc.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +203,13 @@
     "    # C버튼 눌러졌을때 \n",
     "    elif key == \"c\":\n",
     "        display.delete(0, END);\n",
+    "    elif key == functions_lst[0]:\n",
+    "        num = int(display.get());\n",
+    "        ans = 0;\n",
+    "        for i in range(num,1, -1):\n",
+    "            i = i * (i-1)\n",
+    "            ans += i;\n",
+    "        display.insert(END, functions_lst[0] + \"=\" + str(ans))\n",
     "    # 그 외 다른 키를 눌렀을때\n",
     "    else:\n",
     "        display.insert(END, key);\n",
@@ -231,7 +247,7 @@
     "        \n",
     "# 연산자 프레임\n",
     "operator = Frame(window);\n",
-    "operator.grid(row =1, column=1, sticky = E)\n",
+    "operator.grid(row =1, column=4, sticky = E)\n",
     "operator_list = [\n",
     "'*', '/', '+', '-', '{', '}', 'c'\n",
     "]\n",
@@ -261,6 +277,153 @@
     "\n",
     "\n",
     "window.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = input(\"num\");\n",
+    "a = int(num)\n",
+    "for i in range(int(num) , 1):\n",
+    "    a = a * i\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 4\n",
+    "for i in range(a-1, 0, -1):\n",
+    "    a = a * i;\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window = Tk();\n",
+    "\n",
+    "top_row = Frame(window)\n",
+    "top_row.grid(row=0, column = 0, columnspan=2, sticky = N)\n",
+    "display = Entry(top_row, width = 45, bg =\"light green\")\n",
+    "display.grid(row = 0, column = 0, sticky = N)\n",
+    "global i;\n",
+    "def cmd() :\n",
+    "    display.insert(END, lst[i])\n",
+    "    i += 1;\n",
+    "op = Frame(window);\n",
+    "op.grid(row = 1, column = 0)\n",
+    "Button(op, text = \"Click\", width = 5, command = cmd).grid(row = 1, column = 1);\n",
+    "lst = []\n",
+    "for i in range(0, 7):\n",
+    "    lst.append(i);\n",
+    "\n",
+    "window.mainloop();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# window = Tk();\n",
+    "top_row = Frame(window)\n",
+    "top_row.grid(row = 1, column = 0)\n",
+    "display = Entry(top_row, width = 45, bg =\"light green\")\n",
+    "display.grid(row = 0, column = 0, sticky = N)\n",
+    "\n",
+    "def cmd():\n",
+    "    lst = display.get().split();\n",
+    "    print(lst);\n",
+    "    print(type(lst))\n",
+    "\n",
+    "op = Frame(window);\n",
+    "op.grid(row = 2, column = 0)\n",
+    "Button(op, text = \"Click\", width = 5, command = cmd).grid(row = 1, column = 1);\n",
+    "\n",
+    "window.mainloop();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " window = Tk();\n",
+    "top_row = Frame(window)\n",
+    "top_row.grid(row = 1, column = 0)\n",
+    "display = Entry(top_row, width = 45, bg =\"light green\")\n",
+    "display.grid(row = 0, column = 0, sticky = N)\n",
+    "\n",
+    "def cmd():\n",
+    "    lst = display.get().split(',');\n",
+    "    print(lst);\n",
+    "    sor(lst);\n",
+    "\n",
+    "def sor(num_lst):\n",
+    "    for i in range(len(num_lst)):\n",
+    "        for j in range(int(i)+1, len(num_lst)):\n",
+    "            if int(num_lst[i]) < int(num_lst[j]):\n",
+    "                num_lst[i], num_lst[j] = num_lst[j], num_lst[i]\n",
+    "    display.delete(0, END);\n",
+    "    display.insert(END, ':'.join(num_lst) + \" = sorted\")\n",
+    "        \n",
+    "op = Frame(window);\n",
+    "op.grid(row = 2, column = 0)\n",
+    "Button(op, text = \"Click\", width = 5, command = cmd).grid(row = 1, column = 1);\n",
+    "\n",
+    "window.mainloop();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-22-f0bca8e461c0>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-22-f0bca8e461c0>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    global r = 0 ;\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "window = Tk();\n",
+    "\n",
+    "c = 0;\n",
+    "\n",
+    "def cmd():\n",
+    "    wn \n",
+    "\n",
+    "op = Frame(window);\n",
+    "op.grid(row = 2, column = 0)\n",
+    "Button(op, text = \"Click\", width = 5, command = cmd).grid(row = r, column = c);\n",
+    "\n",
+    "window.mainloop();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot([10, 20, 30, 40], [1, 4, 9, 16], c=\"b\", \n",
+    "         lw=5, ls=am, marker=\"o\", ms=15, mec=\"g\", mew=5, mfc=\"r\")\n",
+    "plt.show()\n",
+    "\n",
+    "am = \"--\""
    ]
   }
  ],
